revert cms select query for mobile app
